# swpp202401

./: README.md
lecture-slides/: 07.Factory.java  08.Builder.java  08.FruitInherit.java  08.FruitInterface.java  08.Rectangle.java  08.Shape.java  08.Stream.java  08.Union.java  08.UserFactory.java  08.UserInherit.java  08.UserInterface.java  09.Visitor.java
practice-materials/: .gitignore  README.md
practice-materials/assignments/assn2/: .gitignore  CMakeLists.txt  README.md  build-and-test.sh  package.sh
practice-materials/assignments/assn2/impl/: CMakeLists.txt  maybe_something.cpp  test_helper.cpp
practice-materials/assignments/assn2/interface/: CMakeLists.txt  collect.cppm  maybe_something.cppm  test_helper.cppm
practice-materials/assignments/assn2/test/: CMakeLists.txt
practice-materials/assignments/assn2/test/collect/: CMakeLists.txt  test_failure.cpp  test_move.cpp  test_success.cpp
practice-materials/assignments/assn2/test/maybe_something/: CMakeLists.txt  test.cpp
practice-materials/assignments/assn3/: .gitignore  README.md  add-main.c  add.ll  check.sh  package.sh  sum-main.c  sum.ll
practice-materials/assignments/assn3/data-add/: input3.txt  output3.txt
practice-materials/assignments/assn3/data-sum/: input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  output1.txt  output3.txt  output4.txt  output5.txt  output7.txt
practice-materials/assignments/assn4/: .gitignore  CMakeLists.txt  README.md  build-and-test.sh  package.sh  polygon.sh  unreachable.sh
practice-materials/assignments/assn4/data-poly/: input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  input9.txt  output6.txt  output7.txt  output9.txt
practice-materials/assignments/assn4/data-unreachable/: input1.ll  input2.ll  input3.ll  input4.ll  input5.ll  input6.ll  input7.ll  output5.txt  output6.txt  output7.txt
practice-materials/assignments/assn4/src/: CMakeLists.txt  polygon.cpp  unreachable.cpp
practice-materials/assignments/assn4/test/: CMakeLists.txt  polygon_test.cpp
practice-materials/assignments/assn5/: .gitignore  FAQ.md  README.md  input.ll  package.sh  printdom.cpp  propinteq.cpp  run-printdom.sh  run-propinteq.sh
practice-materials/assignments/assn5/data/: check1.ll  check10.ll  check11.ll  check2.ll  check3.ll  check4.ll  check5.ll  check6.ll  check7.ll  check8.ll  check9.ll
practice-materials/assignments/assn5/mycheck/: check3.ll
practice-materials/dev-env-check/: CMakeLists.txt  README.md  build-and-run.sh
practice-materials/dev-env-check/impl/: CMakeLists.txt  arith.cpp  main.cpp
practice-materials/dev-env-check/interface/: CMakeLists.txt  arith.cppm
practice-materials/materials/Implementing-Optimization/: .gitignore  constfold-bad.ll  constfold.cpp  constfold.ll  fillundef.cpp  fillundef.ll  input.ll  instmatch.cpp  instmatch.ll  output.txt  run.sh
practice-materials/materials/LLVM-Programming/: .gitignore  README.md  dump.cpp  foo.ll  hello.cpp  run-passes.sh
practice-materials/materials/Sanitizer/: .gitignore  README.md  addrsan.c  build-sans.sh  containerchk.cpp  memsan.cpp  ubsan.c
practice-materials/scripts-linux/: .gitignore  install-llvm.sh  install-ninja.sh
practice-materials/scripts-macos/: install-cmake.sh  install-llvm.sh
practice-materials/scripts/linux/: .gitignore  install-alive2.sh  install-cmake.sh  install-llvm.sh
practice-materials/scripts/macos/: .gitignore  install-alive2.sh  install-llvm.sh
project/: alive2-swpp2024-intrinsics.patch  applying-patch.md
project/team-presentation-slides/: team1.pptx  team12.pptx  team2.pptx  team3.pptx  team4.pptx  team6.pptx  team9.pptx
